[gd_scene load_steps=8 format=3 uid="uid://cqvqeucfytevp"]

[ext_resource type="Script" path="res://menus/game_over.gd" id="1_h0u43"]
[ext_resource type="Texture2D" uid="uid://bov30svyjbifg" path="res://player/sprites/player1/clown_idle1.png" id="1_y4b2j"]
[ext_resource type="Texture2D" uid="uid://cyfmtjmnc0j04" path="res://player/sprites/shoulder_left.png" id="2_rmpx7"]
[ext_resource type="Texture2D" uid="uid://bwgl3a0e4suui" path="res://player/sprites/player2/clown_idle1_B.png" id="2_ta8mm"]
[ext_resource type="Texture2D" uid="uid://dupves6i35chc" path="res://player/sprites/arm_left_open.png" id="3_j7vng"]
[ext_resource type="Texture2D" uid="uid://c767htnwkxxec" path="res://player/sprites/shoulder_right.png" id="4_glhxa"]
[ext_resource type="Texture2D" uid="uid://bd4v5tgkh0mnr" path="res://player/sprites/arm_right_open.png" id="5_tiimw"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h0u43")

[node name="MainMenuButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -79.0
offset_top = 134.0
offset_right = 79.0
offset_bottom = 165.0
grow_horizontal = 2
grow_vertical = 2
text = "Back to main menu"

[node name="P1ScoreLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -11.5
offset_right = -280.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2

[node name="ClownIdle1" type="Sprite2D" parent="P1ScoreLabel"]
position = Vector2(0, 230)
texture = ExtResource("1_y4b2j")

[node name="ShoulderLeft" type="Sprite2D" parent="P1ScoreLabel/ClownIdle1"]
position = Vector2(-47, -0.5)
texture = ExtResource("2_rmpx7")

[node name="ArmLeftOpen" type="Sprite2D" parent="P1ScoreLabel/ClownIdle1/ShoulderLeft"]
position = Vector2(-12, 31)
rotation = 0.207978
texture = ExtResource("3_j7vng")

[node name="ShoulderRight" type="Sprite2D" parent="P1ScoreLabel/ClownIdle1"]
position = Vector2(41, -4.5)
rotation = -1.68851
texture = ExtResource("4_glhxa")

[node name="ArmRightOpen" type="Sprite2D" parent="P1ScoreLabel/ClownIdle1/ShoulderRight"]
position = Vector2(-21.2813, 26.6853)
rotation = 0.917032
texture = ExtResource("5_tiimw")

[node name="P2ScoreLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 280.0
offset_top = -11.5
offset_right = 320.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2

[node name="ClownIdle1B" type="Sprite2D" parent="P2ScoreLabel"]
position = Vector2(0, 230)
texture = ExtResource("2_ta8mm")

[node name="ShoulderLeft" type="Sprite2D" parent="P2ScoreLabel/ClownIdle1B"]
position = Vector2(43, 2.5)
scale = Vector2(-1, 1)
texture = ExtResource("2_rmpx7")

[node name="ArmLeftOpen" type="Sprite2D" parent="P2ScoreLabel/ClownIdle1B/ShoulderLeft"]
position = Vector2(-12, 31)
rotation = 0.207978
texture = ExtResource("3_j7vng")

[node name="ShoulderRight" type="Sprite2D" parent="P2ScoreLabel/ClownIdle1B"]
position = Vector2(-44, -4.5)
texture = ExtResource("4_glhxa")

[node name="ArmRightOpen" type="Sprite2D" parent="P2ScoreLabel/ClownIdle1B/ShoulderRight"]
position = Vector2(-21.2813, 26.6853)
rotation = 0.917032
texture = ExtResource("5_tiimw")

[connection signal="pressed" from="MainMenuButton" to="." method="_on_main_menu_button_pressed"]
